[gd_scene load_steps=4 format=3 uid="uid://xfg1y1po7lwy"]

[ext_resource type="Theme" uid="uid://k60pw6sr20k6" path="res://scenes/gui/menu/menu_theme.tres" id="1_kngla"]
[ext_resource type="FontFile" uid="uid://b11ioo1hyx5jc" path="res://scenes/gui/menu/Anta-Regular copy.ttf" id="2_0xbgf"]
[ext_resource type="Script" path="res://src/gui/menu_buttons.gd" id="2_fyplb"]

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_kngla")
script = ExtResource("2_fyplb")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.0
offset_top = 76.0
offset_right = 109.0
offset_bottom = 296.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_kngla")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0xbgf")
theme_override_font_sizes/font_size = 32
text = "Deep Dark"

[node name="PlayButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_kngla")
text = "PLAY"

[node name="QuitButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_kngla")
text = "QUIT"

[node name="SettingsPanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -220.0
offset_right = 407.0
grow_vertical = 0
theme = ExtResource("1_kngla")

[node name="MarginContainer" type="MarginContainer" parent="SettingsPanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsPanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsPanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CheckBox" type="CheckBox" parent="SettingsPanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Full Screen"
alignment = 1

[node name="Label" type="Label" parent="SettingsPanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Volume
"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="SettingsPanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSlider" type="HSlider" parent="SettingsPanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 30.0
value = 15.0

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="toggled" from="SettingsPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="drag_ended" from="SettingsPanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/HSlider" to="." method="_on_h_slider_drag_ended"]
