extends Control

func _ready():
	pass

func _on_play_button_pressed():
	pass # Replace with function body.

func _on_quit_button_pressed():
	pass # Replace with function body.

func _on_check_box_toggled(toggled_on):
	pass # Replace with function body.

func _on_h_slider_drag_ended(value_changed):
	pass # Replace with function body.
